--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
+    "promise": "^8.1.0",
     "puppeteer": "^3.1.0"
   }
 }
