--- a/package.json
+++ b/package.json
@@ -7,15 +7,28 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@cliqz/adblocker-puppeteer": "^1.16.0",
+    "bcrypt": "^4.0.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "promise": "^8.1.0",
-    "puppeteer": "^3.1.0"
+    "puppeteer": "^3.1.0",
+    "puppeteer-extra": "^3.1.9",
+    "puppeteer-extra-plugin-adblocker": "^2.11.3",
+    "puppeteer-extra-plugin-stealth": "^2.4.9",
+    "puppeteer-select": "^1.0.3"
   }
 }
