--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "motoarbitrage",
   "version": "0.0.0",
   "private": true,
+  "bin": "bin/www",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+  },
+  "pkg": {
+    "assets": [
+      "views/*",
+      "public/**/*",
+      "model/*",
+      "config/*",
+      "logic/*"
+    ]
   },
   "dependencies": {
     "@cliqz/adblocker-puppeteer": "^1.16.0",
@@ -17,15 +27,19 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "kijiji-scraper": "^5.0.5",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "promise": "^8.1.0",
     "puppeteer": "^3.1.0",
+    "puppeteer-cluster": "^0.21.0",
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
     "puppeteer-extra-plugin-stealth": "^2.4.9",
