--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
     "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -42,7 +41,6 @@
     "puppeteer-cluster": "^0.21.0",
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-adblocker": "^2.11.3",
-    "puppeteer-extra-plugin-stealth": "^2.4.9",
-    "puppeteer-select": "^1.0.3"
+    "puppeteer-extra-plugin-stealth": "^2.4.9"
   }
 }
