--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cron": "^1.8.2",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
@@ -29,7 +30,6 @@
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
     "morgan": "~1.9.1",
-    "node-cron": "^2.0.3",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
